# apidesign_for_cpp_source

./: .gitignore  CMakeLists.txt  README.md
02_Qualities/: CMakeLists.txt
02_Qualities/callback_instance/: CMakeLists.txt  main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
02_Qualities/callback_static/: CMakeLists.txt  main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
02_Qualities/coord2d_template/: CMakeLists.txt  coord2d.h  coord2d_detail.h  main.cpp
02_Qualities/hide_class/: CMakeLists.txt  fireworks.cpp  fireworks.h  main.cpp
02_Qualities/shared_pointer/: CMakeLists.txt  main.cpp  myobject.cpp  myobject.h
03_Pattern/: CMakeLists.txt
03_Pattern/pimpl_bad/: CMakeLists.txt  autotimer.cpp  autotimer.h  main.cpp
03_Pattern/pimpl_good/: CMakeLists.txt  autotimer.cpp  autotimer.h  main.cpp
